VisualForcePage/src/objects/Student_Details__c.object
<CustomObject>
    <fields>
        <fullName>Class_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Student Details</relationshipLabel>
        <relationshipName>Student_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <label>Student Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_of_Birth__c</columns>
        <columns>Email_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>